--- a/package.json
+++ b/package.json
@@ -1,31 +1,50 @@
 {
-  "name": "miami-wooy",
-  "version": "0.1.0",
-  "private": true,
+  "name": "hackathon-polygon-front",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "test-contract": "npx hardhat test",
+    "deploy": "hardhat deploy --export-all ./frontend/src/contracts/hardhat_contracts.json",
+    "accounts": "hardhat accounts",
+    "chain": "hardhat node --network hardhat --no-deploy",
+    "generate": "hardhat generate",
+    "account": "hardhat account",
+    "typechain": "hardhat clean && hardhat compile",
+    "etherscan-verify": "hardhat etherscan-verify --api-key 1CP5KRVI3E3UT95AZP9TVU94KC7FS32Q2H",
+    "fork": "hardhat node --no-deploy --network hardhat --fork https://mainnet.infura.io/v3/9acd693f34804a00ae21c78d37669ea1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kitkatfour/hackathon-polygon-front.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kitkatfour/hackathon-polygon-front/issues"
+  },
+  "homepage": "https://github.com/kitkatfour/hackathon-polygon-front#readme",
+  "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.4",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
+    "chai": "^4.3.6",
+    "hardhat": "^2.10.2",
+    "hardhat-deploy": "^0.11.12",
+    "hardhat-gas-reporter": "^1.0.8",
+    "solidity-coverage": "^0.7.21",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.0",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.0",
-    "@mui/material": "^5.8.0",
-    "@rainbow-me/rainbowkit": "^0.1.1",
-    "ethers": "^5.6.6",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "wagmi": "^0.3.5",
-    "web3": "^1.7.3"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.0.24"
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+    "ethers": "^5.7.0",
+    "hardhat-deploy-ethers": "^0.3.0-beta.13"
   }
 }
