--- a/package.json
+++ b/package.json
@@ -13,11 +13,19 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
+    "@pooltogether/utilities": "^0.5.1",
     "@rainbow-me/rainbowkit": "^0.1.1",
+    "@wooy/bnc-onboard": "^1.0.0",
+    "@wooy/bnc-onboard-hooks": "^1.0.0",
+    "@wooy/current-pool-data": "^1.0.12",
+    "@wooy/hooks": "^3.0.15-10",
+    "@wooy/react-components": "^1.0.14",
     "ethers": "^5.6.6",
+    "jotai": "^1.8.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-i18next": "^11.18.4",
     "wagmi": "^0.3.5",
     "web3": "^1.7.3"
   },
